tests/snapshots/examples_snapshots__example_local_stdout.snap
---
source: tests/examples_snapshots.rs
expression: sanitize(&stdout)
---
🚀 Local KVS Demo (single node)
→ PUT user:1 = OK
→ PUT user:2 = OK
→ GET user:1 = alice
→ GET user:2 = bob
✅ Local demo complete
