tests/snapshots/examples_snapshots__example_replicated_causal_stdout.snap
---
source: tests/examples_snapshots.rs
expression: sanitize(&stdout)
---
🚀 Replicated KVS Demo (gossip, causal)
→ PUT user:1 = OK
→ PUT user:2 = OK
→ GET user:1 = alice
→ GET user:2 = bob
✅ Replicated (gossip) demo complete
