tests/snapshots/examples_snapshots__example_replicated_lww_stdout.snap
---
source: tests/examples_snapshots.rs
expression: sanitize(&stdout)
---
🚀 Replicated KVS Demo (gossip)
→ PUT OK
→ GET = one
→ PUT OK
→ GET = two
✅ Replicated (gossip) demo complete
