tests/snapshots/examples_snapshots__example_sharded_replicated_stdout.snap
---
source: tests/examples_snapshots.rs
expression: sanitize(&stdout)
---
🚀 Sharded + Replicated KVS Demo
   → shard 1 for 'user:alice'
   → shard 1 for 'user:bob'
   → shard 1 for 'user:alice'
   → shard 1 for 'user:bob'
→ PUT OK
→ PUT OK
→ GET = x
→ GET = y
✅ Sharded+Replicated demo complete
