tests/snapshots/examples_snapshots__example_sharded_stdout.snap
---
source: tests/examples_snapshots.rs
expression: sanitize(&stdout)
---
🚀 Sharded Local KVS Demo
   → shard 1 for 'user:1'
   → shard 1 for 'user:2'
   → shard 1 for 'user:1'
   → shard 1 for 'user:2'
→ PUT OK
→ PUT OK
→ GET = alice
→ GET = bob
✅ Sharded local demo complete
